add some normal states